gccida/g2/instantiate_virtual_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4039:6: error: use of undeclared identifier 'v7'
rtx *v7; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4060:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)&rtx[2], rtx, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4061:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)rtx[3].fld, 0LL, 0); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4069:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)&rtx[4], 0LL, 0); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4081:1: error: use of undeclared identifier 'v7'
v7 = &v5->x_parm_reg_stack_loc[v6]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4082:7: error: use of undeclared identifier 'v7'
if ( *v7 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/function.c:4084:29: error: use of undeclared identifier 'v7'
instantiate_virtual_regs_1( v7, 0LL, 0); 
                            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs/src/obj/function.o] Error 1
